objects/MDPERSONATOR__MD_MatchUpResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DupeGroup__c</fullName>
        <label>DupeGroup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MatchcodeKey__c</fullName>
        <label>MatchcodeKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>RecordID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MD_MatchUpResult</label>
    <nameField>
        <label>MD_MatchUpResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_MatchUpResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>